# school-projects

./: README.md
.ionide/: symbolCache.db
CPSC 3200/: CMakeLists.txt
CPSC 3200/P1/: IntDiv.cs  P1.cs  P1Test.cs
CPSC 3200/P2/: P2.cpp  P2.sln  a  intDiv.cpp  intDiv.h  rangeDiv.cpp  rangeDiv.h
CPSC 3200/P2-2/P2/: Factor.cs  P2.cs  P2.csproj
CPSC 3200/P2/P2/: P2.csproj  multiQ.cs  range.cs
CPSC 3200/P2/backup/: IntDiv.cpp  IntDiv.h  rangeDiv.h
CPSC 3200/P3/: P3.cs  P3.csproj  compundC.cs  excessC.cs  pwdCheck.cs
CPSC 3200/P3-2/P3/: P3.cs  arithS.cs  oscillateA.cs  skipA.cs  tempCodeRunnerFile.cs
CPSC 3200/P3-2/P3/Properties/: AssemblyInfo.cs
CPSC 3200/P3Tests/: P3Tests.sln
CPSC 3200/P3Tests/P3Tests/: ArithSTest.cs  P3Test.cs  SkipATest.cs  arithS.cs  oscillateA.cs  oscillateATest.cs  skipA.cs
CPSC 3200/P4/: CMakeLists.txt  P4.cpp  a  intDiv.cpp  intDiv.h  rangeDiv.cpp  rangeDiv.h
CPSC 3200/P4/backup/: CMakeLists.txt  IntDiv.cpp  IntDiv.h  P2.cpp  rangeDiv.cpp
CPSC 3200/P6/: P3.rar  P3.sln
CPSC 3200/P6-2/P3/: .P3.cs.swo  iFlip.cs  ipwdCheck.cs  pwdCheck.cs
CPSC 3200/P6/P3/: Flip.cs  FlippwdCheck.cs  P3.csproj  P3.sln  P6.cs  amplifier.cs  arithS.cs  arithSMangler.cs  compundC.cs  excessC.cs  iamplifier.cs  iarithS.cs  icompundC.cs  iexcessC.cs  imangler.cs  ioscillateA.cs  ipuzzler.cs  iskipA.cs  mangler.cs  oscillateA.cs  puzzler.cs  skipA.cs
CPSC 3200/P6/P3/Properties/: AssemblyInfo.cs
CPSC 3200/P7/: P1.sln
CPSC 3200/P7/P1/: Factor.cs  P1.csproj  P1.sln  p1.cs
CPSC 3200/P7/P1/Properties/: AssemblyInfo.cs
CPSC 3500/: main.cpp
(+81 files in other folders)
